--- a/css/simple.css
+++ b/css/simple.css
@@ -5,3 +5,15 @@ font-family: sans-serif;
 img {
   width: 50px;
 }
+
+ul {
+  border-style: solid;
+  border-width: 1px;
+}
+
+ul li {
+  border-style: solid;
+  border-width: 1px;
+  border-color: red;
+  list-style-type: none;
+}
