--- a/css/simple.css
+++ b/css/simple.css
@@ -9,11 +9,18 @@ img {
 ul {
   border-style: solid;
   border-width: 1px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: black;
 }
 
 ul li {
-  border-style: solid;
-  border-width: 1px;
-  border-color: red;
   list-style-type: none;
+  display: inline;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+ul li a {
+  color: white;
 }
