--- a/css/simple.css
+++ b/css/simple.css
@@ -23,4 +23,12 @@ ul li {
 
 ul li a {
   color: white;
+  text-decoration: none;
 }
+
+ul li a:hover {
+  text-decoration: underline;
+}
+
+.selected {
+  color: green;}
