--- a/css/simple.css
+++ b/css/simple.css
@@ -6,7 +6,7 @@ img {
   width: 50px;
 }
 
-ul {
+ul.menu {
   border-style: solid;
   border-width: 1px;
   padding: 10px;
@@ -14,19 +14,19 @@ ul {
   background-color: black;
 }
 
-ul li {
+ul.menu li {
   list-style-type: none;
   display: inline;
   margin-right: 10px;
   margin-left: 10px;
 }
 
-ul li a {
+ul.menu li a {
   color: white;
   text-decoration: none;
 }
 
-ul li a:hover {
+ul.menu li a:hover {
   text-decoration: underline;
 }
 
